; ModuleID = '/home/carl/AnghaBench/postgres/src/fe_utils/extr_print.c_print_asciidoc_text.c'
source_filename = "/home/carl/AnghaBench/postgres/src/fe_utils/extr_print.c_print_asciidoc_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i8*, i32, i8*, i8**, i8**, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32, i16, i64, i64 }
%struct.TYPE_8__ = type { i8*, %struct.TYPE_8__* }

@cancel_pressed = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"[%scols=\22\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"options=\22header\22,\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [2 x i8] c",\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.7 = private unnamed_addr constant [3 x i8] c">l\00", align 1
@.str.8 = private unnamed_addr constant [3 x i8] c"<l\00", align 1
@.str.9 = private unnamed_addr constant [2 x i8] c"\22\00", align 1
@.str.10 = private unnamed_addr constant [26 x i8] c",frame=\22none\22,grid=\22none\22\00", align 1
@.str.11 = private unnamed_addr constant [14 x i8] c",frame=\22none\22\00", align 1
@.str.12 = private unnamed_addr constant [24 x i8] c",frame=\22all\22,grid=\22all\22\00", align 1
@.str.13 = private unnamed_addr constant [3 x i8] c"]\0A\00", align 1
@.str.14 = private unnamed_addr constant [7 x i8] c"|====\0A\00", align 1
@.str.15 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"^l|\00", align 1
@.str.17 = private unnamed_addr constant [2 x i8] c"|\00", align 1
@.str.18 = private unnamed_addr constant [3 x i8] c" \09\00", align 1
@.str.19 = private unnamed_addr constant [7 x i8] c"\0A....\0A\00", align 1
@.str.20 = private unnamed_addr constant [6 x i8] c"....\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*, i32*)* @print_asciidoc_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_asciidoc_text(%struct.TYPE_9__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i16, align 2
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i32* %1, i32** %4, align 8
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 5
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  store i32 %15, i32* %5, align 4
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 5
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 1
  %20 = load i16, i16* %19, align 4
  store i16 %20, i16* %6, align 2
  %21 = load i64, i64* @cancel_pressed, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  br label %263

24:                                               ; preds = %2
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 5
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 3
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %144

31:                                               ; preds = %24
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %32)
  %34 = load i32, i32* %5, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %51, label %36

36:                                               ; preds = %31
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 0
  %39 = load i8*, i8** %38, align 8
  %40 = icmp ne i8* %39, null
  br i1 %40, label %41, label %51

41:                                               ; preds = %36
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32* %42)
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 0
  %46 = load i8*, i8** %45, align 8
  %47 = load i32*, i32** %4, align 8
  %48 = call i32 @fputs(i8* %46, i32* %47)
  %49 = load i32*, i32** %4, align 8
  %50 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %49)
  br label %51

51:                                               ; preds = %41, %36, %31
  %52 = load i32*, i32** %4, align 8
  %53 = load i32, i32* %5, align 4
  %54 = icmp ne i32 %53, 0
  %55 = xor i1 %54, true
  %56 = zext i1 %55 to i64
  %57 = select i1 %55, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0)
  %58 = call i32 @fprintf(i32* %52, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %57)
  store i32 0, i32* %7, align 4
  br label %59

59:                                               ; preds = %89, %51
  %60 = load i32, i32* %7, align 4
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %62 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 8
  %64 = icmp ult i32 %60, %63
  br i1 %64, label %65, label %92

65:                                               ; preds = %59
  %66 = load i32, i32* %7, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %71

68:                                               ; preds = %65
  %69 = load i32*, i32** %4, align 8
  %70 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i32* %69)
  br label %71

71:                                               ; preds = %68, %65
  %72 = load i32*, i32** %4, align 8
  %73 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %74 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %73, i32 0, i32 2
  %75 = load i8*, i8** %74, align 8
  %76 = load i32, i32* %7, align 4
  %77 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %78 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = urem i32 %76, %79
  %81 = zext i32 %80 to i64
  %82 = getelementptr inbounds i8, i8* %75, i64 %81
  %83 = load i8, i8* %82, align 1
  %84 = sext i8 %83 to i32
  %85 = icmp eq i32 %84, 114
  %86 = zext i1 %85 to i64
  %87 = select i1 %85, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.8, i64 0, i64 0)
  %88 = call i32 @fprintf(i32* %72, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0), i8* %87)
  br label %89

89:                                               ; preds = %71
  %90 = load i32, i32* %7, align 4
  %91 = add i32 %90, 1
  store i32 %91, i32* %7, align 4
  br label %59

92:                                               ; preds = %59
  %93 = load i32*, i32** %4, align 8
  %94 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.9, i64 0, i64 0), i32* %93)
  %95 = load i16, i16* %6, align 2
  %96 = zext i16 %95 to i32
  switch i32 %96, label %106 [
    i32 0, label %97
    i32 1, label %100
    i32 2, label %103
  ]

97:                                               ; preds = %92
  %98 = load i32*, i32** %4, align 8
  %99 = call i32 @fputs(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.10, i64 0, i64 0), i32* %98)
  br label %106

100:                                              ; preds = %92
  %101 = load i32*, i32** %4, align 8
  %102 = call i32 @fputs(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0), i32* %101)
  br label %106

103:                                              ; preds = %92
  %104 = load i32*, i32** %4, align 8
  %105 = call i32 @fputs(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.12, i64 0, i64 0), i32* %104)
  br label %106

106:                                              ; preds = %92, %103, %100, %97
  %107 = load i32*, i32** %4, align 8
  %108 = call i32 @fputs(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.13, i64 0, i64 0), i32* %107)
  %109 = load i32*, i32** %4, align 8
  %110 = call i32 @fputs(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.14, i64 0, i64 0), i32* %109)
  %111 = load i32, i32* %5, align 4
  %112 = icmp ne i32 %111, 0
  br i1 %112, label %143, label %113

113:                                              ; preds = %106
  %114 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %115 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %114, i32 0, i32 3
  %116 = load i8**, i8*** %115, align 8
  store i8** %116, i8*** %8, align 8
  br label %117

117:                                              ; preds = %137, %113
  %118 = load i8**, i8*** %8, align 8
  %119 = load i8*, i8** %118, align 8
  %120 = icmp ne i8* %119, null
  br i1 %120, label %121, label %140

121:                                              ; preds = %117
  %122 = load i8**, i8*** %8, align 8
  %123 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %124 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %123, i32 0, i32 3
  %125 = load i8**, i8*** %124, align 8
  %126 = icmp ne i8** %122, %125
  br i1 %126, label %127, label %130

127:                                              ; preds = %121
  %128 = load i32*, i32** %4, align 8
  %129 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.15, i64 0, i64 0), i32* %128)
  br label %130

130:                                              ; preds = %127, %121
  %131 = load i32*, i32** %4, align 8
  %132 = call i32 @fputs(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0), i32* %131)
  %133 = load i8**, i8*** %8, align 8
  %134 = load i8*, i8** %133, align 8
  %135 = load i32*, i32** %4, align 8
  %136 = call i32 @asciidoc_escaped_print(i8* %134, i32* %135)
  br label %137

137:                                              ; preds = %130
  %138 = load i8**, i8*** %8, align 8
  %139 = getelementptr inbounds i8*, i8** %138, i32 1
  store i8** %139, i8*** %8, align 8
  br label %117

140:                                              ; preds = %117
  %141 = load i32*, i32** %4, align 8
  %142 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %141)
  br label %143

143:                                              ; preds = %140, %106
  br label %144

144:                                              ; preds = %143, %24
  store i32 0, i32* %7, align 4
  %145 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %146 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %145, i32 0, i32 4
  %147 = load i8**, i8*** %146, align 8
  store i8** %147, i8*** %8, align 8
  br label %148

148:                                              ; preds = %215, %144
  %149 = load i8**, i8*** %8, align 8
  %150 = load i8*, i8** %149, align 8
  %151 = icmp ne i8* %150, null
  br i1 %151, label %152, label %220

152:                                              ; preds = %148
  %153 = load i32, i32* %7, align 4
  %154 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %155 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %154, i32 0, i32 1
  %156 = load i32, i32* %155, align 8
  %157 = urem i32 %153, %156
  %158 = icmp eq i32 %157, 0
  br i1 %158, label %159, label %164

159:                                              ; preds = %152
  %160 = load i64, i64* @cancel_pressed, align 8
  %161 = icmp ne i64 %160, 0
  br i1 %161, label %162, label %163

162:                                              ; preds = %159
  br label %220

163:                                              ; preds = %159
  br label %164

164:                                              ; preds = %163, %152
  %165 = load i32, i32* %7, align 4
  %166 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %167 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %166, i32 0, i32 1
  %168 = load i32, i32* %167, align 8
  %169 = urem i32 %165, %168
  %170 = icmp ne i32 %169, 0
  br i1 %170, label %171, label %174

171:                                              ; preds = %164
  %172 = load i32*, i32** %4, align 8
  %173 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.15, i64 0, i64 0), i32* %172)
  br label %174

174:                                              ; preds = %171, %164
  %175 = load i32*, i32** %4, align 8
  %176 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.17, i64 0, i64 0), i32* %175)
  %177 = load i8**, i8*** %8, align 8
  %178 = load i8*, i8** %177, align 8
  %179 = load i8**, i8*** %8, align 8
  %180 = load i8*, i8** %179, align 8
  %181 = call i64 @strspn(i8* %180, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.18, i64 0, i64 0))
  %182 = getelementptr inbounds i8, i8* %178, i64 %181
  %183 = load i8, i8* %182, align 1
  %184 = sext i8 %183 to i32
  %185 = icmp eq i32 %184, 0
  br i1 %185, label %186, label %198

186:                                              ; preds = %174
  %187 = load i32, i32* %7, align 4
  %188 = add i32 %187, 1
  %189 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %190 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %189, i32 0, i32 1
  %191 = load i32, i32* %190, align 8
  %192 = urem i32 %188, %191
  %193 = icmp ne i32 %192, 0
  br i1 %193, label %194, label %197

194:                                              ; preds = %186
  %195 = load i32*, i32** %4, align 8
  %196 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.15, i64 0, i64 0), i32* %195)
  br label %197

197:                                              ; preds = %194, %186
  br label %203

198:                                              ; preds = %174
  %199 = load i8**, i8*** %8, align 8
  %200 = load i8*, i8** %199, align 8
  %201 = load i32*, i32** %4, align 8
  %202 = call i32 @asciidoc_escaped_print(i8* %200, i32* %201)
  br label %203

203:                                              ; preds = %198, %197
  %204 = load i32, i32* %7, align 4
  %205 = add i32 %204, 1
  %206 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %207 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %206, i32 0, i32 1
  %208 = load i32, i32* %207, align 8
  %209 = urem i32 %205, %208
  %210 = icmp eq i32 %209, 0
  br i1 %210, label %211, label %214

211:                                              ; preds = %203
  %212 = load i32*, i32** %4, align 8
  %213 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %212)
  br label %214

214:                                              ; preds = %211, %203
  br label %215

215:                                              ; preds = %214
  %216 = load i32, i32* %7, align 4
  %217 = add i32 %216, 1
  store i32 %217, i32* %7, align 4
  %218 = load i8**, i8*** %8, align 8
  %219 = getelementptr inbounds i8*, i8** %218, i32 1
  store i8** %219, i8*** %8, align 8
  br label %148

220:                                              ; preds = %162, %148
  %221 = load i32*, i32** %4, align 8
  %222 = call i32 @fputs(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.14, i64 0, i64 0), i32* %221)
  %223 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %224 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %223, i32 0, i32 5
  %225 = load %struct.TYPE_7__*, %struct.TYPE_7__** %224, align 8
  %226 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %225, i32 0, i32 2
  %227 = load i64, i64* %226, align 8
  %228 = icmp ne i64 %227, 0
  br i1 %228, label %229, label %263

229:                                              ; preds = %220
  %230 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %231 = call %struct.TYPE_8__* @footers_with_default(%struct.TYPE_9__* %230)
  store %struct.TYPE_8__* %231, %struct.TYPE_8__** %9, align 8
  %232 = load i32, i32* %5, align 4
  %233 = icmp ne i32 %232, 0
  br i1 %233, label %262, label %234

234:                                              ; preds = %229
  %235 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %236 = icmp ne %struct.TYPE_8__* %235, null
  br i1 %236, label %237, label %262

237:                                              ; preds = %234
  %238 = load i64, i64* @cancel_pressed, align 8
  %239 = icmp ne i64 %238, 0
  br i1 %239, label %262, label %240

240:                                              ; preds = %237
  %241 = load i32*, i32** %4, align 8
  %242 = call i32 @fputs(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.19, i64 0, i64 0), i32* %241)
  %243 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  store %struct.TYPE_8__* %243, %struct.TYPE_8__** %10, align 8
  br label %244

244:                                              ; preds = %255, %240
  %245 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %246 = icmp ne %struct.TYPE_8__* %245, null
  br i1 %246, label %247, label %259

247:                                              ; preds = %244
  %248 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %249 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %248, i32 0, i32 0
  %250 = load i8*, i8** %249, align 8
  %251 = load i32*, i32** %4, align 8
  %252 = call i32 @fputs(i8* %250, i32* %251)
  %253 = load i32*, i32** %4, align 8
  %254 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %253)
  br label %255

255:                                              ; preds = %247
  %256 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %257 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %256, i32 0, i32 1
  %258 = load %struct.TYPE_8__*, %struct.TYPE_8__** %257, align 8
  store %struct.TYPE_8__* %258, %struct.TYPE_8__** %10, align 8
  br label %244

259:                                              ; preds = %244
  %260 = load i32*, i32** %4, align 8
  %261 = call i32 @fputs(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.20, i64 0, i64 0), i32* %260)
  br label %262

262:                                              ; preds = %259, %237, %234, %229
  br label %263

263:                                              ; preds = %23, %262, %220
  ret void
}

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*) #1

declare dso_local i32 @asciidoc_escaped_print(i8*, i32*) #1

declare dso_local i64 @strspn(i8*, i8*) #1

declare dso_local %struct.TYPE_8__* @footers_with_default(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
